# software-engineering-lab

DormManagementApp-Django/hall-management-app-master/: .gitignore  README.txt  manage.py
InstanceSegmentation-Python/: main.py
Maps-ShortestRoutes-CPP/: CMakeLists.txt  mainGUI.fbp
Maps-ShortestRoutes-CPP/include/: application_frame.h  main_app.h  main_frame.h  node.h  rapidxml_print.hpp  rapidxml_utils.hpp
Maps-ShortestRoutes-CPP/include/GeographicLib/: Accumulator.hpp  AlbersEqualArea.hpp  AzimuthalEquidistant.hpp  CassiniSoldner.hpp  CircularEngine.hpp  Constants.hpp  DMS.hpp  Ellipsoid.hpp  EllipticFunction.hpp  GARS.hpp  GeoCoords.hpp  Geocentric.hpp  Geodesic.hpp  GeodesicExact.hpp  GeodesicLine.hpp  GeodesicLineExact.hpp  Geohash.hpp  Geoid.hpp  Georef.hpp  Gnomonic.hpp  GravityCircle.hpp  GravityModel.hpp  LambertConformalConic.hpp  LocalCartesian.hpp  MGRS.hpp  MagneticCircle.hpp  MagneticModel.hpp  Math.hpp  NearestNeighbor.hpp  NormalGravity.hpp  OSGB.hpp  PolarStereographic.hpp  PolygonArea.hpp  Rhumb.hpp  SphericalEngine.hpp  SphericalHarmonic.hpp  SphericalHarmonic1.hpp  SphericalHarmonic2.hpp  TransverseMercator.hpp  TransverseMercatorExact.hpp  (+2 more)
Maps-ShortestRoutes-CPP/lib/: libGeographic.so.19.2.0
Maps-ShortestRoutes-CPP/rapidxml-1.13/: manual.html  rapidxml_iterators.hpp
Maps-ShortestRoutes-CPP/src/: application_frame.cpp  main_app.cpp  main_frame.cpp  node.cpp
PharmacyTerminal-Java/docs/: allclasses-index.html  allpackages-index.html  deprecated-list.html  element-list  help-doc.html  index.html  member-search-index.js  overview-summary.html  (+4 more)
(+135 files in other folders)
